# Points2Prints

./: .gitignore  .markdownlint.json  LICENSE  README.md  pixi.toml
.github/workflows/: docs.yml
cpp/: CMakeLists.txt  Doxyfile  README.md  justfile
cpp/src/: main.cpp
cpp/src/edge_matching/: constants.hpp  criterion.hpp  line_mover.cpp  line_mover.hpp  topology.cpp  topology.hpp
cpp/src/footprints/: constants.hpp  criterion.cpp  criterion.hpp  footprints.cpp  footprints.hpp  points_selection.cpp  points_selection.hpp  simple_scorer.cpp  simple_scorer.hpp
cpp/src/geom/: cgal.cpp  cgal.hpp  kd_tree.hpp  ogc_simple_features.cpp  ogc_simple_features.hpp  points.cpp  points.hpp
cpp/src/las/: enums.hpp  reader.cpp  reader.hpp  trajectory.cpp  trajectory.hpp  writer.cpp  writer.hpp
cpp/src/parquet/: reader.cpp  reader.hpp  writer.cpp  writer.hpp
cpp/src/pca/: local_geometry.hpp  pca.cpp  pca.hpp
cpp/src/roofprint_to_3d/: transfer_3d.cpp  transfer_3d.hpp
cpp/src/roofprints/: constants.hpp  criterion.cpp  criterion.hpp  distances.cpp  distances.hpp  roofprints.cpp  roofprints.hpp
cpp/src/utils/: pbar.hpp  string_helper.hpp  strong_types.hpp
data/validation/: validation-footprints.parquet  validation-roofprints.parquet
docs/: .gitignore  pixi.toml  zensical.toml
docs/docs/: index.md  installation.md  tips.md  troubleshooting.md  usage.md
docs/docs/reference/: api.md
src/points2prints/: README.md  __init__.py  main.py
src/points2prints/bd_topo/: __init__.py  convert.py  main.py
src/points2prints/lidar_hd/: __init__.py  download.py  main.py
src/points2prints/outline/: __init__.py  centroid.py  crop.py  intersections.py  main.py  merge_polygons.py
src/points2prints/pipeline/: __init__.py  bd_topo.py  lidar_hd.py  (+2 more)
(+26 files in other folders)
